# pilot-hdc-dataops

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Jenkinsfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: hdc-pipeline.yml
dataops/: __main__.py  app.py  config.py  logger.py
dataops/components/: __init__.py  authorization.py  cache.py  crud.py  exceptions.py  schemas.py
dataops/components/archive_preview/: __init__.py  crud.py  dependencies.py  models.py  schemas.py  views.py
dataops/components/central_node/: __init__.py  device_storage.py  keycloak.py  models.py  schemas.py  views.py
dataops/components/health/: __init__.py  dependencies.py  resource_checkers.py  views.py
dataops/components/resource_lock/: __init__.py  cache.py  dependencies.py  schemas.py  views.py
dataops/components/resource_operations/: __init__.py  dependencies.py  filtering.py  schemas.py  views.py
dataops/components/task_dispatch/: __init__.py  crud.py  dependencies.py  schemas.py  sorting.py  views.py
dataops/components/task_stream/: __init__.py  crud.py  dependencies.py  parsing.py  schemas.py  views.py
dataops/dependencies/: __init__.py  auth.py  db.py  redis.py
dataops/services/: metadata.py  queue.py
migrations/: alembic.ini  env.py
migrations/scripts/: create_db.sql  create_schema.sql
migrations/versions/: 5b4ff5276434_alter_archive_preview_table.py  ebd1730ac381_add_archive_preview_model.py
tests/: conftest.py
tests/components/archive_preview/: test_views.py
tests/components/central_node/: test_device_storage.py  (+2 more)
tests/dependencies/: test_cache.py  test_db.py  test_redis.py
tests/fixtures/: app.py  cache.py  db.py  fake.py  redis.py
tests/services/: test_metadata.py  test_queue.py
(+15 files in other folders)
